<resources>
    <string name="app_name">Smart Health Consulting App</string>
    <string name="choose_your_account_type">Choose your account type</string>
    <string name="patients_for_treatment">Patients for Treatment</string>
    <string name="for_those_with_diseases">(for those with diseases)</string>
    <string name="i_have_a_disease_and_wants_to_interact_nwith_a_doctor">I have a disease and wants to interact \nwith a doctor.</string>
    <string name="i_am_a_doctor_and_wants_to_provide_ntreatment">I am a doctor and wants to provide \ntreatment.</string>
    <string name="for_doctors">For Doctors</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number_to_login">Enter your mobile number to login</string>
    <string name="_91">+91</string>
    <string name="next">Next</string>
    <string name="enter_the_otp_sen_t_on_9767857572">Enter the OTP sent on 9767857572</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="hello_amaan">Hello</string>
    <string name="past_history">Past History</string>
    <string name="no_history_yet">No history present</string>
    <string name="home">Home</string>
    <string name="search_doctors">Search doctors</string>
    <string name="profile">Profile</string>
    <string name="inspect_health">Inspect Health</string>
    <string name="pending_cases">Pending Cases</string>
    <string name="past_cases">Past Cases</string>
    <string name="complete_your_details">Complete your details</string>
    <string name="enter_your_name">Enter your name…</string>
    <string name="enter_your_college">Enter your college…</string>
    <string name="enter_your_degree">Enter your degree...</string>
    <string name="enter_your_speciality">Enter your speciality...</string>
    <string name="save">Save</string>
    <string name="inspect_your_health_by_specifying_symptoms">Inspect your health by specifying \nsymptoms</string>
    <string name="headache">Headache</string>
    <string name="submit">Submit</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="search_by_name">Search by name...</string>
    <string name="dr_amaan_ur_rahman">Dr. Amaan Ur Rahman</string>
    <string name="m_b_b_s">M.B.B.S</string>
    <string name="active">Active</string>
    <string name="offline">Offline</string>
    <string name="sign_out">Sign out</string>
    <string name="amaan">Amaan</string>
    <string name="search">Search</string>
    <string name="enter_your_mobile_number">Enter your mobile number...</string>
    <string name="_9767857572">9767857572</string>
    <string name="upload_image">Upload image</string>
    <string name="name">Name</string>
    <string name="amaan_ur_rahman">Amaan Ur Rahman</string>
    <string name="phone">Phone</string>
    <string name="_91_9767857572">+91 9767857572</string>
    <string name="sign_out_">Sign out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to Sign out?</string>
    <string name="yes">Yes</string>
    <string name="enter_your_name_">Enter your name</string>
    <string name="cancel">Cancel</string>
</resources>