<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/choose_your_account_type"
        android:textSize="18sp"
        android:fontFamily="@font/robotoblack"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/cvPatient" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:id="@+id/cvPatient"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="50dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/patients_for_treatment"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoblack"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvPTitle"
                    android:text="@string/for_those_with_diseases"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/tvPTitle"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/robotomedium"
                    android:id="@+id/tvPSubTitle"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/i_have_a_disease_and_wants_to_interact_nwith_a_doctor"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tvPTitle"
                app:layout_constraintTop_toBottomOf="@id/tvPSubTitle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toEndOf="@id/tvPInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/crowd"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvPatient"
        android:id="@+id/cvDoctors"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="50dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/for_doctors"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoblack"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDTitle"
                android:text="@string/for_those_with_diseases"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tvDTitle"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/robotomedium"
                android:id="@+id/tvDSubTitle"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDSubTitle"
                android:layout_marginTop="11dp"
                android:id="@+id/tvDInfo"
                android:fontFamily="@font/robotomedium"
                android:text="@string/i_am_a_doctor_and_wants_to_provide_ntreatment"
                app:layout_constraintStart_toStartOf="@id/tvDTitle"
                android:textSize="12sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toEndOf="@id/tvDInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/medical"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>