<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/btnBack"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:text="@string/login"
        android:textColor="@color/app_theme"
        android:textSize="22sp"
        android:fontFamily="@font/robotomedium"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNum"
        android:text="@string/enter_the_otp_sen_t_on_9767857572"
        android:textColor="@color/black"
        android:fontFamily="@font/robotomedium"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />
    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:bar_active_color="@color/app_theme"
        app:height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:width="40dp"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:length="6"
        android:layout_marginTop="60dp"
        app:otp_text_size="24dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnVerify"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="45dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="30dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/verify_otp"
                android:gravity="center"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>