<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cvDoctor"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivDoc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/doc"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/app_theme"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDocName"
                android:text="@string/dr_amaan_ur_rahman"
                app:layout_constraintStart_toEndOf="@id/ivDoc"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/app_theme"
                android:fontFamily="@font/spartanmedium500"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSpeciality"
                app:layout_constraintTop_toBottomOf="@id/tvDocName"
                app:layout_constraintStart_toStartOf="@id/tvDocName"
                android:text="@string/m_b_b_s"
                android:textColor="@color/app_theme"
                android:fontFamily="@font/spartanreg"
                android:textSize="9sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:id="@+id/ivStatus"
                    android:src="@drawable/active"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:id="@+id/tvStatus"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/spartanreg"
                    android:layout_marginStart="7dp"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>