<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent_white"
    android:clickable="true"
    android:focusable="true">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/cvDocDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_your_details"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/spartanreg"
                android:textColor="@color/app_theme"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvHeader"
                android:textStyle="bold"
                android:layout_marginTop="7dp"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                app:layout_constraintTop_toBottomOf="@id/tvHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/profile"
                android:layout_marginTop="28dp"
                android:layout_width="65dp"
                android:layout_height="65dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/black"/>
            
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                android:gravity="center"
                android:text="@string/upload_image"
                android:textColor="@color/app_theme"
                android:fontFamily="@font/spartanreg"
                android:layout_marginTop="7dp"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/ivDone"
                android:visibility="gone"
                android:src="@drawable/correct"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="13dp"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                app:trackCornerRadius="10dp"
                android:indeterminate="true"
                app:trackThickness="4dp"
                app:indicatorColor="@color/app_theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                android:layout_marginTop="13dp"
                android:id="@+id/piPatientDetails"
                android:visibility="gone"
                />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEnterName"
                android:text="@string/enter_your_name"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                android:layout_marginTop="50dp"
                android:layout_marginStart="15dp"
                android:textSize="13sp"
                android:textColor="@color/app_theme"
                android:textStyle="bold"
                android:fontFamily="@font/spartanreg"
                app:layout_constraintStart_toStartOf="parent"/>
            
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="12dp"
                android:id="@+id/cvNameDetails"
                app:cardCornerRadius="23dp"
                app:strokeColor="@color/app_theme"
                app:strokeWidth="2dp"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                app:layout_constraintTop_toBottomOf="@id/tvEnterName"
                >
                <EditText
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:theme="@style/Widget.AppCompat.EditText"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:id="@+id/etName"
                    android:hint="@string/enter_your_name"
                    android:textColor="@color/black"
                    android:fontFamily="@font/spartanreg"
                    android:layout_marginStart="20dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEnterClg"
                android:text="@string/enter_your_mobile_number"
                app:layout_constraintTop_toBottomOf="@id/cvNameDetails"
                android:layout_marginTop="18dp"
                android:layout_marginStart="15dp"
                android:editable="false"
                android:textSize="13sp"
                android:textColor="@color/app_theme"
                android:textStyle="bold"
                android:fontFamily="@font/spartanreg"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="12dp"
                android:id="@+id/cvNumber"
                app:cardCornerRadius="23dp"
                app:strokeColor="@color/app_theme"
                app:strokeWidth="2dp"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                app:layout_constraintTop_toBottomOf="@id/tvEnterClg"
                >
                <EditText
                    android:padding="2dp"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:theme="@style/Widget.AppCompat.EditText"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:editable="false"
                    android:textSize="10sp"
                    android:id="@+id/etPhone"
                    android:hint="@string/_9767857572"
                    android:textColor="@color/black"
                    android:fontFamily="@font/spartanreg"
                    android:layout_marginStart="20dp"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cvNumber"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/cvNameDetails"
                app:layout_constraintEnd_toEndOf="@id/cvNameDetails"
                android:text="@string/save"
                android:textStyle="bold"
                android:backgroundTint="@color/app_theme"
                android:textAllCaps="false"
                android:fontFamily="@font/spartanreg"
                app:cornerRadius="8dp"
                android:padding="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>